# Autonomous-Multi-Agent

./: .gitignore  README.md  TESTING_SETUP.md  example.env  main.py  pyproject.toml
.cursor/rules/: code-quality-standards.mdc
.github/workflows/: ci.yml
.husky/: pre-push
frontend/: package-lock.json  package.json
frontend/.husky/: pre-push
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: ChatHeader.tsx  ChatInput.tsx  Markdown.tsx  MessageList.tsx  SessionsSidebar.tsx  SettingsModal.tsx
frontend/src/utils/: storage.ts
implementation/: backend_implementation.md  frontend_implementation.md
orchestrator_agent/: api.py  config.py  schemas.py  services.py  session_manager.py  system_configuration.py
orchestrator_agent/agent_test/: llm_test.py  test_backend_memory.py  test_graph_tools.py  test_langfuse.py  test_math_tools.py  test_message_slicing.py  test_services.py  test_session_manager.py  test_tool_loop_guard.py
orchestrator_agent/graphs/: basic_chatbot_graph.py  graph_builder.py
orchestrator_agent/llms/: anthropic_llm.py  gemini_llm.py  groq_llm.py  litellm.py  litellm_generic.py  ollama_llm.py  openai_llm.py  router_llm.py
orchestrator_agent/nodes/: basic_chatbot_node.py
orchestrator_agent/prompts/: prompts.py
orchestrator_agent/states/: chatbotState.py  structured_outputs.py
orchestrator_agent/tools/: math_tools.py
scripts/: pre-push  setup-git-hooks.ps1  setup-git-hooks.sh  verify_llms.py
