[project]
name = "autonomous-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "langsmith>=0.8.5",
]
